[gd_scene load_steps=13 format=3 uid="uid://due45vxlcj784"]

[ext_resource type="Script" path="res://player/player_grav.gd" id="1_bhf44"]
[ext_resource type="Texture2D" uid="uid://vkhcsjd25oo3" path="res://dodge_the_creeps_2d_assets/art/playerGrey_Jump1.png" id="2_auokg"]
[ext_resource type="Texture2D" uid="uid://cd11w2kk8re8p" path="res://dodge_the_creeps_2d_assets/art/playerGrey_walk1.png" id="2_l06d6"]
[ext_resource type="Texture2D" uid="uid://k2fjyeqyajw7" path="res://dodge_the_creeps_2d_assets/art/playerGrey_walk2.png" id="4_sh8lj"]
[ext_resource type="Script" path="res://player/attack.gd" id="5_3dgdb"]
[ext_resource type="Texture2D" uid="uid://cde2352vr0dhk" path="res://dodge_the_creeps_2d_assets/art/playerGrey_attack1.png" id="5_7bmq6"]
[ext_resource type="Script" path="res://player/win.gd" id="7_mnxwg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mdutf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_auokg")
}, {
"duration": 1.0,
"texture": ExtResource("2_l06d6")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l06d6")
}, {
"duration": 1.0,
"texture": ExtResource("4_sh8lj")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1enxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7bmq6")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_28lhb"]
radius = 27.0
height = 68.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytyti"]
size = Vector2(52, 61)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dncxs"]
radius = 27.0
height = 68.0

[node name="player_grav" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_bhf44")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_mdutf")
animation = &"jump"
speed_scale = 3.0

[node name="attack" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_1enxp")
animation = &"attack"
offset = Vector2(46.51, 0)
script = ExtResource("5_3dgdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_priority = 1
process_physics_priority = 1
shape = SubResource("CapsuleShape2D_28lhb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="win" type="Label" parent="Camera2D"]
offset_left = -276.0
offset_top = -277.0
offset_right = 328.0
offset_bottom = -200.0
theme_override_font_sizes/font_size = 56
text = "You Won. or did you...."
horizontal_alignment = 1
script = ExtResource("7_mnxwg")

[node name="attack2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack2"]
position = Vector2(46, 1.5)
shape = SubResource("RectangleShape2D_ytyti")

[node name="cooldown" type="Timer" parent="."]
autostart = true

[node name="frame" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_dncxs")

[connection signal="body_entered" from="attack2" to="." method="_on_attack_2_body_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="frame" to="." method="_on_frame_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
